# uploader_backend

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: django.yml
examples/: file2.txt
ocean-dbs/: README.md  setup.cfg
ocean-dbs/oceandbs/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
ocean-dbs/oceandbs/fixtures/: payment_methods.json  quotes.json  storages.json  tokens.json
ocean-dbs/oceandbs/migrations/: 0002_rename_paymentmethod_payment_payment_method_and_more.py  0003_remove_storage_payment_methods_paymentmethod_storage_and_more.py  0004_remove_paymentmethod_title.py  0007_storage_url.py  0008_alter_quote_options_alter_storage_options_and_more.py  0010_file_size_alter_file_original_url_and_more.py  0012_rename_chain_id_paymentmethod_chainid_and_more.py  0013_rename_payment_method_acceptedtoken_paymentmethod_and_more.py  0015_rename_original_url_file_public_url_and_more.py  0016_remove_quote_upload_status_quote_status.py  0017_quote_expiration_quote_nonce.py  0019_remove_file_file_file_cid_file_title_and_more.py
ocean-dbs/oceandbs/tests/: test_file_upload.py  test_quote_link_endpoint.py  test_quote_status.py  test_storage_registration.py  tests_info.py  tests_post_quotes.py  tests_quote.py  tests_storage.py
scripts/: approval.py  signature.py
server/: oceandbs
server/oceandbs/: admin.py  apps.py  factories.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
server/oceandbs/fixtures/: storages.json  (+1 more)
server/server/: settings.py  urls.py
(+27 files in other folders)
