[metadata]
name = oceandbs
version = attr: oceandbs.__version__
url = https://git.startinblox.com/djangoldp-packages/djangoldp-scale
author = Startinblox
author_email = benoit@startinblox.com
description = DRF-based package implementing the Ocean DBS API.
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    djangorestframework
    django
    requests
    drf-spectacular
    factory-boy
    Faker

[options.extras_require]
include_package_data = True

[semantic_release]
version_source = tag
version_variable = oceandbs/__init__.py:__version__
commit_parser = commit_parser.parse
